# post-threshold-finite-field-geometry

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: MAIN_RESULTS.md  OPEN_PROBLEMS.md  OVERVIEW.md  PROOF_GUIDE.md  REPRODUCIBILITY.md  THEOREM_LEDGER.md  WITHDRAWN_AND_CORRECTED_CLAIMS.md  ZENODO_RELEASE_INSTRUCTIONS.md
notes/: branch_closures_f35.md  distinguished_coordinate_extension_f35.md  exchangeable_support_le2_f35.md  star_ansatz_f35.md  threshold_theorem.md  uniform_sign_f35.md
proofs/: distinguished_coordinate_extension_exact_closure_f35.md  exchangeable_support_le2_f35.md  star_ansatz_exact_closure_f35.md  threshold_theorem.md  uniform_sign_full_class_f35.md
scripts/: verify_constants.py  verify_distinguished_coordinate_extension.py  verify_exchangeable_value.py  verify_star_branch_closures.py  verify_star_value.py  verify_threshold_theorem.py
src/post_threshold_geometry/: __init__.py  constants.py  formulas.py  theorem_ledger.py
tests/: test_constants.py  test_formulas.py  test_symbolic_relations.py
