[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "post-threshold-finite-field-geometry"
version = "0.1.0"
description = "Frozen theorem-package repository for odd-prime post-threshold finite-field geometry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["sympy>=1.12"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
